--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		"logo": "images/LogoWebsiteTimQuartex1.png",
 		"sameAs": []
 }</script>
-    <meta name="theme-color" content="#478ac9">
+    <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Cool Mind">
     <meta property="og:type" content="website">
   </head>
