mengedit file index.html: fix typo

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ borders: top right bottom left !important
                 <div class="u-grey-60 u-radius-5 u-shape u-shape-round u-shape-1" data-animation-name="slideIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="Up"></div>
                 <img src="images/bilianjaypng1.png" alt="" class="u-image u-image-default u-image-1" data-image-width="672" data-image-height="1093" data-animation-name="slideIn" data-animation-duration="750" data-animation-delay="0" data-animation-direction="Left">
                 <h2 class="u-text u-text-1">Gunawan Sabili R.</h2>
-                <p class="u-text u-text-palette-5-dark-1 u-text-2">Seorang pelajar SMAN 1 Kota Bogor. Memiliki cita-cita menjadi seorang Profesional Front-end Web Developer. Tertarik dengan sesuatu yang berkaitan dengan teknologi saat ini. Akan melanjutkan ke perguruan tinggi negeri.</p>
+                <p class="u-text u-text-palette-5-dark-1 u-text-2">Seorang pelajar SMAN 1 Kota Bogor. Memiliki cita-cita menjadi seorang Profesional Front-end Web Developer. Tertarik dengan sesuatu yang berkaitan teknologi saat ini. Akan melanjutkan ke perguruan tinggi negeri.</p>
                 <div class="u-social-icons u-spacing-10 u-social-icons-1">
                   <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/reyvaaryadesta"><span class="u-icon u-social-icon u-social-instagram u-text-black"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-dc4c"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-dc4c"><path fill="currentColor" d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z
 	 M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path fill="#FFFFFF" d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path fill="currentColor" d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7
@@ -219,7 +219,7 @@ borders: top right bottom left !important
                 <div class="u-grey-60 u-radius-5 u-shape u-shape-round u-shape-3" data-animation-name="slideIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="Up"></div>
                 <img src="images/reyvapng.png" alt="" class="u-image u-image-default u-image-2" data-image-width="663" data-image-height="1280" data-animation-name="slideIn" data-animation-duration="750" data-animation-delay="0" data-animation-direction="Left">
                 <h2 class="u-text u-text-3">Reyva Aryadesta</h2>
-                <p class="u-text u-text-palette-5-dark-1 u-text-4"> Pelajar SMAN 1 Kota Bogor. Mempunyai hobi di bidang ​pemrograman dan bercita2 bekerja di spaceX. Saya selalu berharap dan berjuang terus untuk mendapatkan beasiswa ke luar negeri.</p>
+                <p class="u-text u-text-palette-5-dark-1 u-text-4"> Pelajar SMAN 1 Kota Bogor. Mempunyai hobi di bidang ​pemrograman dan bercita-cita bekerja di spaceX. Berharap dan berjuang terus untuk mendapatkan beasiswa ke luar negeri.</p>
                 <div class="u-social-icons u-spacing-10 u-social-icons-2">
                   <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/reyvaaryadesta"><span class="u-icon u-social-icon u-social-instagram u-text-black"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-3ad2"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-3ad2"><path fill="currentColor" d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z
 	 M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path fill="#FFFFFF" d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path fill="currentColor" d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7
@@ -247,7 +247,7 @@ borders: top right bottom left !important
                 <div class="u-grey-60 u-radius-5 u-shape u-shape-round u-shape-5" data-animation-name="slideIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="Up"></div>
                 <img src="images/aktarpng.png" alt="" class="u-image u-image-default u-image-3" data-image-width="426" data-image-height="586" data-animation-name="slideIn" data-animation-duration="750" data-animation-delay="0" data-animation-direction="Left">
                 <h2 class="u-text u-text-5">Akhtar Putra A.</h2>
-                <p class="u-text u-text-palette-5-dark-1 u-text-6"> Pelajar SMAN 1 Kota Bogor, hobi bermain musik, bercita-cita menjadi seorang programmer, dan akan lanjut di jenjang perkuliahan.semangat hidup selalu ia tanamkan untuk keberhasilan di masa depan.</p>
+                <p class="u-text u-text-palette-5-dark-1 u-text-6"> Pelajar SMAN 1 Kota Bogor, hobi bermain musik, bercita-cita menjadi seorang programmer dan akan lanjut di jenjang perkuliahan. Semangat hidup selalu ia tanamkan untuk keberhasilan di masa depan.</p>
                 <div class="u-social-icons u-spacing-10 u-social-icons-3">
                   <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/aktr_7"><span class="u-icon u-social-icon u-social-instagram u-text-black"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-17e4"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-17e4"><path fill="currentColor" d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z
 	 M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path fill="#FFFFFF" d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path fill="currentColor" d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7
@@ -390,7 +390,7 @@ borders: top right bottom left !important
               </div>
               <div class="u-align-center-sm u-align-right-md u-container-style u-layout-cell u-size-20 u-size-20-md u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
-                  <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="783" data-image-height="702">
+                  <a href="" class="u-image u-logo u-image-1" data-image-width="783" data-image-height="702">
                     <img src="images/LogoWebsiteTimQuartex1.png" class="u-logo-image u-logo-image-1">
                   </a>
                 </div>
